# NeuralDeepDesktop

./: .gitignore  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.md
app/: README.md  index.html  package.json  vite.config.ts
app/src/: App.tsx  Icon.tsx  Md.tsx  styles.css  transport.ts
app/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
docs/: README.md  docs-map.html  ontology.md
docs/decisions/: 0001-rust-host-trusted-loopback.md  0002-thin-wrapper-full-harness.md  README.md
docs/guides/: README.md  run-dev.md
docs/reference/: README.md  architecture.md  hermes-backend.md  licensing.md  packaging.md  verification.md
docs/services/: README.md
docs/services/desktop-app/: README.md
patches/: README.md  hermes-api_server-reasoning.patch
skills/ndcode/: SKILL.md
tasks_01/: task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10.md  task_11.md
