[package]
name = "neural-deep-desktop"
version = "0.0.1"
description = "Neural Deep Desktop — thin wrapper over the Hermes harness, routed to the NeuralDeep hub."
edition = "2021"
rust-version = "1.77"

[lib]
name = "neural_deep_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
dirs = "5"
rfd = "0.15"
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
